Remove old BE/FE folders and add new ones

--- a/Shoozy_Shop_BE/.gitignore
+++ b/Shoozy_Shop_BE/.gitignore
@@ -12,6 +12,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
+.env
 
 ### IntelliJ IDEA ###
 .idea
@@ -35,3 +36,5 @@ logs/
 *.log
 *.gz
 logs/
+logs/
+*.log
